--- a/k8s/paperless_ngx_secrets/onepassword-item.yml
+++ b/k8s/paperless_ngx_secrets/onepassword-item.yml
@@ -5,4 +5,4 @@ metadata:
   name: paperless-ngx-secrets
   namespace: paperless-ngx
 spec:
-  itemPath: vaults/Kubernetes/items/paperless-ngx
+  itemPath: "vaults/HomeLab/items/Paperless-NGX Server Variables"
