--- a/k8s/paperless_ngx/configmap.yml
+++ b/k8s/paperless_ngx/configmap.yml
@@ -12,6 +12,8 @@ data:
   PAPERLESS_REDIS: "redis://paperless-ngx-broker:6379"
   PAPERLESS_DBHOST: "paperless-ngx-db"
   PAPERLESS_DBPORT: "5432"
+  PAPERLESS_TIME_ZONE: "America/Chicago"
+  PAPERLESS_URL: "https://paperless.rohu-shark.ts.net"
   PAPERLESS_OCR_LANGUAGE: "eng"
   PAPERLESS_TIKA_ENABLED: "true"
   PAPERLESS_TIKA_ENDPOINT: "http://paperless-ngx-tika:9998"
