--- a/ansible/roles/onepassword_operator_deploy/tasks/main.yml
+++ b/ansible/roles/onepassword_operator_deploy/tasks/main.yml
@@ -30,11 +30,6 @@
          else onepassword_operator_deploy_connect_credentials | from_json }}
   no_log: true
 
-- name: Debug onepassword_operator_deploy_connect_credentials_normalized
-  ansible.builtin.debug:
-    var: onepassword_operator_deploy_connect_credentials_normalized
-  # no_log: true
-
 - name: Validate JSON structure for onepassword_operator_deploy_connect_credentials
   ansible.builtin.assert:
     that:
@@ -60,10 +55,9 @@
     mode: "0600"
   no_log: true
 
-- name: Set static path to pass to k8s_object_manager role
+- name: Set rendered path to pass to k8s_object_manager role
   ansible.builtin.set_fact:
-    onepassword_operator_deploy_manifest: >-
-      {{ role_path }}/templates/application.yml
+    onepassword_operator_deploy_manifest: "{{ onepassword_operator_deploy_manifest_tempfile.path }}"
 
 - name: Apply 1password-operator ArgoCD Application manifest
   ansible.builtin.include_role:
@@ -87,27 +81,34 @@
     onepassword_operator_deploy_k8s_result: {}
   when: not (onepassword_operator_deploy_apply_objects | bool)
 
-- name: Wait for 1Password Operator ArgoCD Application to be synced and healthy
+- name: Wait for onepassword-connect Deployment to be Available
   kubernetes.core.k8s_info:
     kubeconfig: "{{ onepassword_operator_deploy_kubeconfig }}"
     context: "{{ onepassword_operator_deploy_context }}"
-    api_version: argoproj.io/v1alpha1
-    kind: Application
-    namespace: "{{ onepassword_operator_deploy_argocd_namespace }}"
-    name: "{{ onepassword_operator_deploy_app_name }}"
-  register: onepassword_operator_deploy_app_status
+    api_version: apps/v1
+    kind: Deployment
+    namespace: "{{ onepassword_operator_deploy_namespace }}"
+    name: onepassword-connect
+  register: onepassword_operator_deploy_connect_deploy
   until:
-    - onepassword_operator_app_status.resources is defined
-    - onepassword_operator_app_status.resources | length > 0
-    - onepassword_operator_app_status.resources[0].status is defined
-    - onepassword_operator_app_status.resources[0].status.sync is defined
-    - >-
-      onepassword_operator_app_status.resources[0].status.sync.status
-      == "Synced"
-    - onepassword_operator_app_status.resources[0].status.health is defined
-    - >-
-      onepassword_operator_app_status.resources[0].status.health.status
-      == "Healthy"
+    - (onepassword_operator_deploy_connect_deploy.resources | default([])) | length > 0
+    - (onepassword_operator_deploy_connect_deploy.resources[0].status.availableReplicas | default(0)) | int >= 1
+  retries: 60
+  delay: 5
+  when: onepassword_operator_deploy_apply_objects | bool
+
+- name: Wait for onepassword-connect-operator Deployment to be Available
+  kubernetes.core.k8s_info:
+    kubeconfig: "{{ onepassword_operator_deploy_kubeconfig }}"
+    context: "{{ onepassword_operator_deploy_context }}"
+    api_version: apps/v1
+    kind: Deployment
+    namespace: "{{ onepassword_operator_deploy_namespace }}"
+    name: onepassword-connect-operator
+  register: onepassword_operator_deploy_operator_deploy
+  until:
+    - (onepassword_operator_deploy_operator_deploy.resources | default([])) | length > 0
+    - (onepassword_operator_deploy_operator_deploy.resources[0].status.availableReplicas | default(0)) | int >= 1
   retries: 60
   delay: 5
   when: onepassword_operator_deploy_apply_objects | bool
