--- a/ansible/roles/omada_deploy/tasks/main.yml
+++ b/ansible/roles/omada_deploy/tasks/main.yml
@@ -2,8 +2,8 @@
 - name: Ensure Omada Argo CD Application is present
   kubernetes.core.k8s:
     state: present
-    definition: >-
-      {{ lookup('ansible.builtin.template', 'omada-application.yml.j2') }}
+    apply: true
+    definition: "{{ lookup('ansible.builtin.template', 'omada-application.yml.j2') | from_yaml }}"
     kubeconfig: "{{ omada_deploy_kubeconfig | default(omit, true) }}"
     context: "{{ omada_deploy_context | default(omit, true) }}"
   when: omada_deploy_apply_application | default(true) | bool
@@ -24,7 +24,8 @@
 - name: Apply Omada ingress templates
   kubernetes.core.k8s:
     state: present
-    definition: "{{ lookup('ansible.builtin.template', item.path) }}"
+    apply: true
+    definition: "{{ lookup('ansible.builtin.template', item.path) | from_yaml }}"
     kubeconfig: "{{ omada_deploy_kubeconfig | default(omit, true) }}"
     context: "{{ omada_deploy_context | default(omit, true) }}"
   loop: "{{ omada_deploy_ingress_templates.files | default([]) }}"
