--- a/k8s/paperless_ngx_secrets/onepassword-item.yml
+++ b/k8s/paperless_ngx_secrets/onepassword-item.yml
@@ -3,6 +3,6 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: paperless-ngx-secrets
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
 spec:
   itemPath: "vaults/HomeLab/items/Paperless-NGX Server Variables"
