--- a/ansible/roles/paperless_ngx_deploy/defaults/main.yml
+++ b/ansible/roles/paperless_ngx_deploy/defaults/main.yml
@@ -5,7 +5,7 @@ paperless_ngx_deploy_cluster_name: "{{ k3s_cluster_name | default('', true) }}"
 
 paperless_ngx_deploy_app_name: paperless-ngx
 paperless_ngx_deploy_secrets_app_name: paperless-ngx-secrets
-paperless_ngx_deploy_namespace: paperless-ngx
+paperless_ngx_deploy_namespace: apps-paperless-ngx
 paperless_ngx_deploy_argocd_namespace: argocd
 paperless_ngx_deploy_project: coachlight-k3s-apps
 
