--- a/k8s/paperless_ngx/broker.yml
+++ b/k8s/paperless_ngx/broker.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: paperless-ngx-broker
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/component: broker
@@ -72,7 +72,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: paperless-ngx-broker
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/component: broker
