--- a/k8s/paperless_ngx/db.yml
+++ b/k8s/paperless_ngx/db.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: paperless-ngx-db
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/component: db
@@ -97,7 +97,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: paperless-ngx-db
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/component: db
