--- a/k8s/paperless_ngx/gotenberg.yml
+++ b/k8s/paperless_ngx/gotenberg.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: paperless-ngx-gotenberg
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/component: gotenberg
@@ -54,7 +54,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: paperless-ngx-gotenberg
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/component: gotenberg
