--- a/k8s/paperless_ngx/tika.yml
+++ b/k8s/paperless_ngx/tika.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: paperless-ngx-tika
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/component: tika
@@ -50,7 +50,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: paperless-ngx-tika
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/component: tika
