--- a/k8s/paperless_ngx/webserver.yml
+++ b/k8s/paperless_ngx/webserver.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: paperless-ngx-webserver
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/component: webserver
@@ -87,7 +87,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: paperless-ngx-webserver
-  namespace: paperless-ngx
+  namespace: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/component: webserver
