--- a/argocd/postgres/postgres.yml
+++ b/argocd/postgres/postgres.yml
@@ -7,12 +7,12 @@ spec:
   project: coachlight-k3s-db
   source:
     repoURL: https://charts.bitnami.com/bitnami
-    chart: postgres
-    targetRevision: 18.1.10
+    chart: postgresql
+    targetRevision: 17.6.0
     helm:
       valuesObject:
         image:
-          repository: bitnamilegacy/postgres
+          repository: bitnamilegacy/postgresql
   destination:
     server: https://kubernetes.default.svc
     namespace: db-postgres
