--- a/k8s/paperless_ngx/configmap.yml
+++ b/k8s/paperless_ngx/configmap.yml
@@ -9,8 +9,8 @@ metadata:
     app.kubernetes.io/component: webserver
     app.kubernetes.io/managed-by: argocd
 data:
-  PAPERLESS_REDIS: "redis://paperless-ngx-broker:6379"
-  PAPERLESS_DBHOST: "paperless-ngx-db"
+  PAPERLESS_REDIS: "redis://redis-master.db-redis.svc.cluster.local:6379"
+  PAPERLESS_DBHOST: "postgres-postgresql.db-postgres.svc.cluster.local"
   PAPERLESS_DBPORT: "5432"
   PAPERLESS_TIME_ZONE: "America/Chicago"
   PAPERLESS_URL: "https://paperless.rohu-shark.ts.net"
