--- a/k8s/paperless_ngx/pvcs.yml
+++ b/k8s/paperless_ngx/pvcs.yml
@@ -10,7 +10,7 @@ metadata:
     app.kubernetes.io/managed-by: argocd
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: synology-csi-nfs-delete
   resources:
     requests:
@@ -27,7 +27,7 @@ metadata:
     app.kubernetes.io/managed-by: argocd
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: synology-csi-nfs-delete
   resources:
     requests:
@@ -44,7 +44,7 @@ metadata:
     app.kubernetes.io/managed-by: argocd
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: synology-csi-nfs-delete
   resources:
     requests:
@@ -61,7 +61,7 @@ metadata:
     app.kubernetes.io/managed-by: argocd
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: synology-csi-nfs-delete
   resources:
     requests:
