Maybe got all the DB creds correct.

--- a/argocd/postgres/postgres.yml
+++ b/argocd/postgres/postgres.yml
@@ -13,6 +13,13 @@ spec:
       valuesObject:
         image:
           repository: bitnamilegacy/postgresql
+        auth:
+          enablePostgresUser: false
+          username: paperless
+          database: paperless
+          existingSecret: paperless-ngx-secrets
+          secretKeys:
+            userPassword: PAPERLESS_DBPASS
         master:
           podSecurityContext:
             enabled: true
