--- a/argocd/redis/redis.yml
+++ b/argocd/redis/redis.yml
@@ -13,6 +13,10 @@ spec:
       valuesObject:
         image:
           repository: bitnamilegacy/redis
+        auth:
+          enabled: true
+          existingSecret: paperless-ngx-redis-secrets
+          existingSecretPasswordKey: redis-password
         master:
           podSecurityContext:
             enabled: true
