--- a/argocd/redis/redis_secrets.yml
+++ b/argocd/redis/redis_secrets.yml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: paperless-ngx-secrets
+  name: paperless-ngx-redis-secrets
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "0"
