--- a/k8s/paperless_ngx/namespace.yml
+++ b/k8s/paperless_ngx/namespace.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: paperless-ngx
+  name: apps-paperless-ngx
   labels:
     app.kubernetes.io/name: paperless-ngx
     app.kubernetes.io/managed-by: argocd
