--- a/k8s/paperless_ngx/webserver.yml
+++ b/k8s/paperless_ngx/webserver.yml
@@ -91,7 +91,7 @@ metadata:
   annotations:
     tailscale.com/expose: "true"
     tailscale.com/hostname: "paperless"
-    tailscale.com/tags: "tag:k8s,tags:server-apps"
+    tailscale.com/tags: "tag:k8s,tag:server-apps"
 spec:
   type: ClusterIP
   ports:
