--- a/k8s/paperless_ngx/webserver.yml
+++ b/k8s/paperless_ngx/webserver.yml
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
         - name: paperless-ngx
-          image: ghcr.io/paperless-ngx/paperless-ngx:latest
+          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.3
           ports:
             - containerPort: 8000
               name: http
@@ -46,10 +46,10 @@ spec:
               mountPath: /usr/src/paperless/consume
           resources:
             requests:
-              memory: "512Mi"
-              cpu: "250m"
+              memory: "1Gi"
+              cpu: "500m"
             limits:
-              memory: "2Gi"
+              memory: "4Gi"
               cpu: "2"
           livenessProbe:
             httpGet:
