--- a/argocd/postgres/postgres.yml
+++ b/argocd/postgres/postgres.yml
@@ -15,6 +15,7 @@ spec:
       valuesObject:
         image:
           repository: bitnamilegacy/postgresql
+
         auth:
           enablePostgresUser: false
           username: paperless
@@ -22,18 +23,9 @@ spec:
           existingSecret: paperless-ngx-secrets
           secretKeys:
             userPasswordKey: PAPERLESS_DBPASS
-        master:
-          podSecurityContext:
-            enabled: true
-            fsGroup: 1001
-            fsGroupChangePolicy: "OnRootMismatch"
-          containerSecurityContext:
-            enabled: true
-            runAsUser: 1001
-            runAsGroup: 1001
-            runAsNonRoot: true
 
-        replica:
+        primary:
+          replicaCount: 0
           podSecurityContext:
             enabled: true
             fsGroup: 1001
@@ -43,6 +35,10 @@ spec:
             runAsUser: 1001
             runAsGroup: 1001
             runAsNonRoot: true
+          persistentVolumeClaimRetentionPolicy:
+            enabled: true
+            whenScaled: Retain
+            whenDeleted: Retain
 
         volumePermissions:
           enabled: true
