Bunch of provisioner fixes

--- a/ansible/roles/argocd_deploy/files/coachlight-k3s-infra-project.yml
+++ b/ansible/roles/argocd_deploy/files/coachlight-k3s-infra-project.yml
@@ -28,6 +28,9 @@ spec:
     - server: https://kubernetes.default.svc
       namespace: infra-*
 
+    - server: https://kubernetes.default.svc
+      namespace: storage-*
+
   orphanedResources:
     warn: true
 
