--- a/ansible/playbooks/coachlight-infra-stack.yml
+++ b/ansible/playbooks/coachlight-infra-stack.yml
@@ -75,6 +75,21 @@
           {{ tailscale_oauth_client_id }}
         tailscale_operator_deploy_oauth_client_secret: >-
           {{ tailscale_oauth_client_secret }}
+
+    - role: k8s_object_manager
+      vars:
+        k8s_object_manager_kubeconfig: "{{ kubeconfig_manager_artifacts.target_kubeconfig_path }}"
+        k8s_object_manager_context: "{{ kubeconfig_manager_artifacts.context_name }}"
+        k8s_object_manager_src: "{{ playbook_dir }}/../../argocd/nfs_provisioner/nfs_provisioner.yml"
+        k8s_object_manager_state: present
+        k8s_object_manager_apply: true
+    - role: k8s_object_manager
+      vars:
+        k8s_object_manager_kubeconfig: "{{ kubeconfig_manager_artifacts.target_kubeconfig_path }}"
+        k8s_object_manager_context: "{{ kubeconfig_manager_artifacts.context_name }}"
+        k8s_object_manager_src: "{{ playbook_dir }}/../../argocd/cluster_primitives/cluster_primitives.yml"
+        k8s_object_manager_state: present
+        k8s_object_manager_apply: true
     - role: synology_csi_deploy
       vars:
         k8s_validator_kubeconfig: >-
