--- a/k8s/cluster_primitives/storageclasses/nfs-synology-retain.yml
+++ b/k8s/cluster_primitives/storageclasses/nfs-synology-retain.yml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     storageclass.kubernetes.io/description: >-
       Requires nfs-subdir-external-provisioner
-provisioner: cluster.local/nfs-subdir-external-provisioner
+provisioner: k8s-sigs.io/nfs-subdir-external-provisioner
 reclaimPolicy: Retain
 volumeBindingMode: Immediate
 allowVolumeExpansion: true
