--- a/k8s/crafty_controller/pvc-import.yml
+++ b/k8s/crafty_controller/pvc-import.yml
@@ -8,8 +8,8 @@ metadata:
     app: crafty-controller
 spec:
   accessModes:
-    - ReadWriteOnce
-  storageClassName: synology-csi-nfs-delete
+    - ReadWriteMany
+  storageClassName: nfs-synology-delete
   resources:
     requests:
       storage: 50Gi
