--- a/k8s/crafty_controller/pvc-config.yml
+++ b/k8s/crafty_controller/pvc-config.yml
@@ -8,8 +8,8 @@ metadata:
     app: crafty-controller
 spec:
   accessModes:
-    - ReadWriteOnce
-  storageClassName: local-path
+    - ReadWriteMany
+  storageClassName: nfs-synology-retain
   resources:
     requests:
       storage: 10Gi
