Change the storage class to the correct naming

--- a/k8s/cluster_primitives/storageclasses/nfs-synology-retain.yml
+++ b/k8s/cluster_primitives/storageclasses/nfs-synology-retain.yml
@@ -10,3 +10,6 @@ provisioner: k8s-sigs.io/nfs-subdir-external-provisioner
 reclaimPolicy: Retain
 volumeBindingMode: Immediate
 allowVolumeExpansion: true
+parameters:
+  pathPattern: "${.PVC.namespace}/${.PVC.name}"
+  onDelete: "retain"
