Remove migration job, and add new storageclass to postgres

--- a/argocd/postgres/postgres.yml
+++ b/argocd/postgres/postgres.yml
@@ -33,6 +33,10 @@ spec:
 
         primary:
           replicaCount: 0
+          persistence:
+            enabled: true
+            storageClass: nfs-synology-retain
+            size: 8Gi
           podSecurityContext:
             enabled: true
             fsGroup: 1001
