--- a/k8s/postgres_secrets/kustomization.yml
+++ b/k8s/postgres_secrets/kustomization.yml
@@ -3,4 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - onepassword-postgres.yml
-  - postgres-pv-migration-job.yml
+  # - postgres-pv-migration-job.yml
