--- a/argocd/redis/redis.yml
+++ b/argocd/redis/redis.yml
@@ -42,6 +42,8 @@ spec:
             runAsUser: 1001
             runAsGroup: 1001
             runAsNonRoot: true
+          # persistence:
+          #   storageClass: nfs-synology-retain
 
         replica:
           podSecurityContext:
@@ -53,6 +55,8 @@ spec:
             runAsUser: 1001
             runAsGroup: 1001
             runAsNonRoot: true
+          persistence:
+            storageClass: nfs-synology-retain
 
         volumePermissions:
           enabled: true
