Paperless migrate jobs

--- a/k8s/paperless_ngx/pv-paperless-consume.yml
+++ b/k8s/paperless_ngx/pv-paperless-consume.yml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/name: paperless-ngx
 spec:
+  storageClassName: ""
   capacity:
     storage: 10Gi
   accessModes:
