--- a/argocd/apps/operators/argocd-projects.yml
+++ b/argocd/apps/operators/argocd-projects.yml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 spec:
-  project: coachlight-k3s-infra
+  project: default
   source:
     repoURL: https://github.com/SRF-Audio/utility-scripts
     targetRevision: main
