--- a/argocd/root.yml
+++ b/argocd/root.yml
@@ -7,7 +7,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: coachlight-k3s-infra
+  project: default
   source:
     repoURL: https://github.com/SRF-Audio/utility-scripts
     targetRevision: main
